--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATASOURCE-URL}
+spring.datasource.username=${DATASOURCE-USERNAME}
+spring.datasource.password=${DATASOURCE-PASSWORD}
