--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATASOURCE-URL}
 spring.datasource.username=${DATASOURCE-USERNAME}
 spring.datasource.password=${DATASOURCE-PASSWORD}
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
